# lps

./: .dockerignore  .env.example  .gitignore  .goreleaser.yaml  CONTRIBUTING.md  LICENSE  NAMING.md  PRD.md  README.md  SECURITY.md  TODO.md  Taskfile.yaml  docker-compose.yml
.gitea/workflows/: release.yaml
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: release.yml
api/: Dockerfile  README.md  alembic.ini  pyproject.toml
api/app/: config.py  db.py  main.py  seed.py
api/app/routers/: auth.py  distros.py  ingest.py  install.py  packages.py  projects.py  search.py  suggestions.py
api/migrations/: env.py
api/migrations/versions/: 0001_initial.py  0002_suggestions.py  0003_users.py  0004_ingest_jobs.py
api/tests/: test_health.py
cli/: go.mod
cli/cmd/lps/: main.go
cli/internal/api/: client.go
cli/internal/config/: config.go
cli/internal/distro/: distro.go
db/: README.md
db/migrations/: 0001_initial.down.sql  0001_initial.up.sql  0002_suggestions.down.sql  0002_suggestions.up.sql  0003_users.down.sql  0003_users.up.sql  0004_ingest_jobs.down.sql  0004_ingest_jobs.up.sql
deploy/: README.md
deploy/helm/lps/: Chart.yaml  values-dev.yaml  values.yaml
docs/: crowdsourcing.md  distro-onboarding-and-ingest-jobs.md
ingest/: Dockerfile  README.md  pyproject.toml
ingest/lps_ingest/: alpine.py  arch.py  cli.py  config.py  debian.py  fedora.py  models.py  opensuse.py  rpm_repodata.py  upsert.py
scripts/: promote_admin.py
web/: .env.example  Dockerfile  README.md  astro.config.mjs  package.json  tailwind.config.mjs
(+20 files in other folders)
