[project]
name = "lps-api"
version = "0.1.0"
description = "LPS HTTP API (FastAPI + asyncpg)"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "asyncpg>=0.29",
  "psycopg[binary]>=3.2",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "alembic>=1.13",
  "sqlalchemy>=2.0",
  "httpx>=0.27",
  "orjson>=3.10",
]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.6", "mypy>=1.10"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
