[project]
name = "lps-ingest"
version = "0.1.0"
description = "LPS ingestion workers — per-distro parsers"
requires-python = ">=3.12"
dependencies = [
  "asyncpg>=0.29",
  "httpx>=0.27",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-debian>=0.1.49",
  "zstandard>=0.22",
]

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"
